@@ -130,7 +130,6 @@ following file list.
       $prefix/share/aclocal/lib-link.m4
       $prefix/share/aclocal/lib-prefix.m4
       $prefix/share/aclocal/lock.m4
-      $prefix/share/aclocal/longdouble.m4
       $prefix/share/aclocal/longlong.m4
       $prefix/share/aclocal/nls.m4
       $prefix/share/aclocal/po.m4
