@@ -7416,7 +7416,7 @@ the simplest is to concatenate the files @file{codeset.m4},
 @file{intdiv0.m4}, @file{intl.m4}, @file{intldir.m4}, @file{intmax.m4},
 @file{inttypes_h.m4}, @file{inttypes-pri.m4}, @file{lcmessage.m4},
 @file{lib-ld.m4}, @file{lib-link.m4}, @file{lib-prefix.m4}, @file{lock.m4},
-@file{longdouble.m4}, @file{longlong.m4}, @file{nls.m4}, @file{po.m4},
+@file{longlong.m4}, @file{nls.m4}, @file{po.m4},
 @file{printf-posix.m4}, @file{progtest.m4}, @file{size_max.m4},
 @file{stdint_h.m4}, @file{uintmax_t.m4}, @file{ulonglong.m4},
 @file{visibility.m4}, @file{wchar_t.m4}, @file{wint_t.m4}, @file{xsize.m4}
