@@ -1,3 +1,7 @@
+2007-04-06  Bruno Haible  <bruno@clisp.org>
+
+	* gettext.texi (aclocal): Remove longdouble.m4 from the file list.
+
 2007-03-27  Bruno Haible  <bruno@clisp.org>
 
 	* gettext.texi (Bug Report Address): New section.
