@@ -1,3 +1,8 @@
+2007-04-06  Bruno Haible  <bruno@clisp.org>
+
+	* Makefile.am (distcheck-hook): Don't compare longdouble.m4.
+	* PACKAGING: Remove longdouble.m4 from the file list.
+
 2007-04-02  Bruno Haible  <bruno@clisp.org>
 
 	* DEPENDENCIES: Mention dependency towards cvs.
